clusters/home-cluster/apps/prowlarr/service-prowlarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-service
  namespace: default
spec:
  selector:
    app: prowlarr
  ports:
    - protocol: TCP
      name: webui
      port: 9696
      targetPort: 9696
