clusters/home-cluster/apps/prowlarr/miniflux-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: miniflux-route
  namespace: default
spec:
  parentRefs:
  - name: bacterio-gw
  hostnames:
  - "miniflux.carles.cc"
  rules:
  - backendRefs:
    - name: miniflux
      port: 8080
