clusters/home-cluster/apps/prowlarr/prowlarr-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr-route
  namespace: default
spec:
  parentRefs:
  - name: bacterio-gw
  hostnames:
  - "prowlarr.carles.cc"
  rules:
  - backendRefs:
    - name: prowlarr
      port: 9696
